- Fixed issues:
	NX-1149 (Pass EventRecordID with matched Windows event log record)
	NX-1258 (Option to pass event data from Windows event log to NetXMS event)
	NX-1259 (Added NXSL function - FindAlarmByKeyRegex)
	NX-1363 (Automatic deployment of agent policies)
	NX-1364 (Automatically create nodes for unbound agent tunnels)
	NX-1367 (Fix HP aCC compiler warnings)
	NX-1389 (If library script saved with compilation errors it disappears from script list)
	NX-1392 (Reload log parser without agent restart)
	NX-1393 (PostgreSQL deadlock on updating raw_dci_data table)
	NX-1398 (Windows Server 2016 not detected correctly)
	NX-1399 (Some SQL queries fail when using MariaDB driver because of MariaDB bug CONC-281)


*
* 2.2.2
* 

- Server command line tools working with agents (nxaction, nxap, nxget, nxupload) use encryption by default
- "Floor plan" display mode for objects on network map
- Access to zone data in network discovery filters 
- Automatic target configuration in PING subagent
- Implemented option to display object status map in radial form
- Fixed issues:
	NX-513 (add toString() to all data objects in netxms-base)
	NX-599 (Delete single collected value from a DCI)
	NX-669 (DRBD monitoring is not working in some configurations)
	NX-689 (Pass found SNMP configuration while discovery for new node creation)
	NX-890 (Passive elements in rack)
	NX-1169 (Encryption is not set by default between agent and server)
	NX-1297 (Copying Files inside File Manager using CTRL and Drag&Drop is not working)
	NX-1299 (Add username filter to CountEx(*) and Process.XXX(*) parameters in Linux subagent)
	NX-1306 (Show system FQDN in tunnel manager)
	NX-1350 (Invert Values option for performance tab DCIs; Performance tab graph configuration is maintained on double-click)
	NX-1366 (Edit option for "group box" decorations on network maps)
	NX-1369 (Title not displayed for dashboard element "Rack")
	NX-1370 (Rack page not displayed correctly when switch between rack objects)