@@ -36,6 +36,7 @@ INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_rest
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('ConfigurationPollingInterval','3600','3600',1,1,'I','Interval in seconds between configuration polls.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,is_public,description) VALUES ('DashboardDataExportEnableInterpolation','1','1',1,1,'B','Y','Enable/disable data interpolation in dashboard data export.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DataCollection.OnDCIDelete.TerminateRelatedAlarms','1','1',1,0,'B','Enable/disable automatic termination of related alarms when data collection item is deleted.');
+INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DataCollection.ScriptErrorReportInterval','86400','86400',1,0,'I','Minimal interval between reporting errors in data collection related script.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DBConnectionPoolBaseSize','10','10',1,1,'I','A number of connections to the database created on the server startup.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DBConnectionPoolCooldownTime','300','300',1,1,'I','');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DBConnectionPoolMaxLifetime','14400','14400',1,1,'I','');
