@@ -24,6 +24,16 @@
 #include <nxevent.h>
 
 /**
+ * Upgrade from 22.15 to 22.16
+ */
+static bool H_UpgradeFromV15()
+{
+   CHK_EXEC(CreateConfigParam(_T("DataCollection.ScriptErrorReportInterval"), _T("86400"), _T("Minimal interval between reporting errors in data collection related script."), 'I', true, false, false, false));
+   CHK_EXEC(SetMinorSchemaVersion(16));
+   return true;
+}
+
+/**
  * Upgrade from 22.14 to 22.15
  */
 static bool H_UpgradeFromV14()
@@ -305,6 +315,7 @@ static struct
    bool (* upgradeProc)();
 } s_dbUpgradeMap[] =
 {
+   { 15, 22, 16, H_UpgradeFromV15 },
    { 14, 22, 15, H_UpgradeFromV14 },
    { 13, 22, 14, H_UpgradeFromV13 },
    { 12, 22, 13, H_UpgradeFromV12 },
